codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__blockquote_paste_embedded_answer.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5302
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────"
"❯ > first line                                              "
"  >                                                         "
"  > last line                                               "
"                                                            "
"  Next block                                                "
"                                                            "
"────────────────────────────────────────────────────────────"
"                                         100% context left  "
